# SYCL-BLAS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  a.out  temp.cpp
.github/workflows/: deploy-docs.yml  deploy_pages.yml
SYCL-BLAS/: CMakeLists.txt  blas.hpp  blas_c.hpp
SYCL-BLAS/Database/: database_structures.hpp
SYCL-BLAS/Database/kernels/: CMakeLists.txt
SYCL-BLAS/Level 1/: CMakeLists.txt  UsefulFunctions.hpp  core.hpp  scal.cpp  scal.hpp
SYCL-BLAS/Level 1/axpy/: AXPY.hpp  CMakeLists.txt  caxpy.cpp  caxpy.hpp  daxpy.cpp  daxpy.hpp  saxpy.cpp  saxpy.hpp  zaxpy.cpp  zaxpy.hpp
SYCL-BLAS/Level 1/copy/: CMakeLists.txt  COPY.hpp  ccopy.cpp  ccopy.hpp  dcopy.cpp  dcopy.hpp  scopy.cpp  scopy.hpp  zcopy.cpp  zcopy.hpp
SYCL-BLAS/Level 1/scal/: CMakeLists.txt  SCAL.hpp  cscal.cpp  cscal.hpp  csscal.cpp  csscal.hpp  dscal.cpp  dscal.hpp  sscal.cpp  sscal.hpp  zdscal.cpp  zdscal.hpp  zscal.cpp  zscal.hpp
SYCL-BLAS/Level 1/swap/: SWAP.hpp  cswap.hpp  dswap.hpp  sswap.hpp
SYCL-BLAS/Level1/: CMakeLists.txt
SYCL-BLAS/Level1/AXPY/: AXPY.hpp  CMakeLists.txt  axpy.cpp
SYCL-BLAS/Setup/: Setup.hpp  UsefulFunctions.hpp
docs/: AXPY_8hpp.html  AXPY_8hpp.js  AXPY_8hpp__dep__incl.dot  AXPY_8hpp__incl.dot  AXPY_8hpp_source.html  COPY_8hpp.html  COPY_8hpp__dep__incl.dot  COPY_8hpp__incl.dot  COPY_8hpp_source.html  Database_2kernels_2axpy_2axpy_8cpp.html  Database_2kernels_2axpy_2axpy_8cpp__incl.dot  Level1_2AXPY_2axpy_8cpp.html  Level1_2AXPY_2axpy_8cpp.js  Level1_2AXPY_2axpy_8cpp__incl.dot  NumericFunctions_8hpp.html  NumericFunctions_8hpp.js  NumericFunctions_8hpp_source.html  SCAL_8hpp.html  SCAL_8hpp__dep__incl.dot  SCAL_8hpp__incl.dot  SCAL_8hpp_source.html  SWAP_8hpp.html  SWAP_8hpp__incl.dot  SWAP_8hpp_source.html  Setup_8hpp.html  Setup_8hpp__dep__incl.dot  Setup_8hpp__incl.dot  Setup_8hpp_source.html  UsefulFunctions_8hpp.html  UsefulFunctions_8hpp.js  UsefulFunctions_8hpp__dep__incl.dot  UsefulFunctions_8hpp__incl.dot  UsefulFunctions_8hpp_source.html  annotated.html  annotated_dup.js  axpy_8cpp.html  axpy_8cpp__incl.dot  blas_8hpp.html  blas_8hpp.js  blas_8hpp__dep__incl.dot  (+239 more)
docs/html/: graph_legend.html  index.html  navtreedata.js
docs/latex/: AXPY_8hpp.tex  AXPY_8hpp.tex.tmp  AXPY_8hpp__dep__incl.dot  AXPY_8hpp__incl.dot  AXPY_8hpp_source.tex  Database_2kernels_2axpy_2axpy_8cpp.tex  Database_2kernels_2axpy_2axpy_8cpp__incl.dot  Level1_2AXPY_2axpy_8cpp.tex  Level1_2AXPY_2axpy_8cpp__incl.dot  NumericFunctions_8hpp.tex  NumericFunctions_8hpp_source.tex  UsefulFunctions_8hpp.tex  UsefulFunctions_8hpp__incl.dot  UsefulFunctions_8hpp_source.tex  annotated.tex  blas_8hpp.tex  blas_8hpp__dep__incl.dot  blas_8hpp__incl.dot  blas_8hpp_source.tex  blas__c_8hpp.tex  blas__c_8hpp__dep__incl.dot  blas__c_8hpp__incl.dot  blas__c_8hpp_source.tex  classSimpleAxpy.tex  classsyBlast_1_1database_1_1Database.tex  classsyBlast_1_1database_1_1Database__coll__graph.dot  classsyBlast_1_1database_1_1OptimalFunctionParameters.tex  classsyBlast_1_1database_1_1OptimalFunctionParameters__coll__graph.dot  classsyBlast_1_1parameters_1_1FunctionParameters.tex  core_8hpp.tex  core_8hpp__incl.dot  core_8hpp_source.tex  database_8hpp.tex  database_8hpp__dep__incl.dot  database_8hpp__incl.dot  database_8hpp_source.tex  database__structures_8hpp.tex  database__structures_8hpp__dep__incl.dot  database__structures_8hpp__incl.dot  database__structures_8hpp_source.tex  (+26 more)
docs/rtf/: refman.rtf
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  namespaces_1.js  (+19 more)
docs/xml/: Doxyfile.xml
syBlast/: CMakeLists.txt  blas.cpp  blas.hpp  syBlast.hpp  syBlast_template.hpp
syBlast/Database/: CMakeLists.txt  database.hpp  database_structures.hpp
syBlast/Database/kernels/: CMakeLists.txt
syBlast/Database/kernels/axpy/: axpy.cpp  saxpy.hpp
syBlast/Level1/: CMakeLists.txt
syBlast/Level1/AXPY/: AXPY.hpp  axpy.cpp
syBlast/Level1/SCAL/: SCAL.hpp  scal.cpp
syBlast/Setup/: NumericFunctions.hpp  UsefulFunctions.hpp
syBlast/core/: complex.hpp
syBlast/kernels/: axpy.cpp  copy.cpp  dot.cpp  dot.hpp  nrmsetc.cpp  nrmsetc.hpp  scal.cpp  swap.cpp  vectorScaling.cpp  vectorScaling.hpp
tests/: CMakeLists.txt  test_Complex.cpp  test_dot.cpp  test_temp.cpp  test_vectorScaling.cpp
tests/Validation/: CMakeLists.txt  axpy.cpp
tests/Validation/Level 1/: CMakeLists.txt  axpy.cpp  copy.cpp  nrm2.cpp  scal.cpp  swap.cpp
tests/Validation/Setup/: CMakeLists.txt  Complex.cpp
tests/functions/: CMakeLists.txt  test_axpy.cpp
